Add ANN search and memory service. Implements a new retrieval tool for vector similarity search in Cassandra and integrates it as a persistent memory service